--- a/index.html
+++ b/index.html
@@ -15473,7 +15473,7 @@
                             <div class="row">
                                 <div class="col-lg-2 col-md-3">
                                     <div class="mycarousel-item p-2 p-md-3 bg-white text-center">
-                                        <div class="img-container"><img src="/static/media/client-Texitech.jpg" alt="team-1" class="img-fluid rounded"></div>
+                                        <div class="img-container"><img src="client-Texitech.jpg" alt="team-1" class="img-fluid rounded"></div>
                                     </div>
                                 </div>
                                 <div class="col-lg-2 col-md-3">
@@ -15483,17 +15483,17 @@
                                 </div>
                                 <div class="col-md-3 mb-5">
                                     <div class="mycarousel-item p-2 p-md-3 bg-white text-center">
-                                        <div class="img-container"><img src="/static/media/client-Eureka-Xpress.png" alt="team-3" class="img-fluid rounded"></div>
+                                        <div class="img-container"><img src="client-Eureka-Xpress.png" alt="team-3" class="img-fluid rounded"></div>
                                     </div>
                                 </div>
                                 <div class="col-lg-2 col-md-3">
                                     <div class="mycarousel-item p-2 p-md-3 bg-white text-center">
-                                        <div class="img-container"><img src="/static/media/client-HBL-Curr-Exc.4350ed02.png" alt="team-4" class="img-fluid rounded"></div>
+                                        <div class="img-container"><img src="client-HBL-Curr-Exc.4350ed02.png" alt="team-4" class="img-fluid rounded"></div>
                                     </div>
                                 </div>
                                 <div class="col-md-3 mb-5">
                                     <div class="mycarousel-item p-2 p-md-3 bg-white text-center">
-                                        <div class="img-container"><img src="/static/media/client-ITS.png" alt="team-5" class="img-fluid rounded"></div>
+                                        <div class="img-container"><img src="client-ITS.png" alt="team-5" class="img-fluid rounded"></div>
                                     </div>
                                 </div>
                             </div>
@@ -15502,22 +15502,22 @@
                             <div class="row">
                                 <div class="col-lg-2 col-md-3">
                                     <div class="mycarousel-item p-2 p-md-3 bg-white text-center">
-                                        <div class="img-container"><img src="/static/media/client-Karachi_University.png" alt="team-6" class="img-fluid rounded"></div>
+                                        <div class="img-container"><img src="client-Karachi_University.png" alt="team-6" class="img-fluid rounded"></div>
                                     </div>
                                 </div>
                                 <div class="col-md-3 mb-5">
                                     <div class="mycarousel-item p-2 p-md-3 bg-white text-center">
-                                        <div class="img-container"><img src="/static/media/client-MeezanBank.png" alt="team-7" class="img-fluid rounded"></div>
+                                        <div class="img-container"><img src="client-MeezanBank.png" alt="team-7" class="img-fluid rounded"></div>
                                     </div>
                                 </div>
                                 <div class="col-lg-2 col-md-3">
                                     <div class="mycarousel-item p-2 p-md-3 bg-white text-center">
-                                        <div class="img-container"><img src="/static/media/client-National-Savings.png" alt="team-8" class="img-fluid rounded"></div>
+                                        <div class="img-container"><img src="client-National-Savings.png" alt="team-8" class="img-fluid rounded"></div>
                                     </div>
                                 </div>
                                 <div class="col-lg-2 col-md-3">
                                     <div class="mycarousel-item p-2 p-md-3 bg-white text-center">
-                                        <div class="img-container"><img src="/static/media/client-Pro-Farmer.png" alt="team-9" class="img-fluid rounded"></div>
+                                        <div class="img-container"><img src="client-Pro-Farmer.png" alt="team-9" class="img-fluid rounded"></div>
                                     </div>
                                 </div>
                                 <div class="col-lg-2 col-md-3">
@@ -15531,17 +15531,17 @@
                             <div class="row">
                                 <div class="col-lg-3 col-md-3">
                                     <div class="mycarousel-item p-2 p-md-3 bg-white text-center">
-                                        <div class="img-container"><img src="/static/media/client-AA-Quality-Builders.png" alt="team-11" class="img-fluid rounded"></div>
+                                        <div class="img-container"><img src="client-AA-Quality-Builders.png" alt="team-11" class="img-fluid rounded"></div>
                                     </div>
                                 </div>
                                 <div class="col-lg-3 col-md-3">
                                     <div class="mycarousel-item p-2 p-md-3 bg-white text-center">
-                                        <div class="img-container"><img src="/static/media/client-SIMAS.jpg" alt="team-12" class="img-fluid rounded"></div>
+                                        <div class="img-container"><img src="client-SIMAS.jpg" alt="team-12" class="img-fluid rounded"></div>
                                     </div>
                                 </div>
                                 <div class="col-lg-3 col-md-3">
                                     <div class="mycarousel-item p-2 p-md-3 bg-white text-center">
-                                        <div class="img-container"><img src="/static/media/client-EA-Consulting-PvtLtd.jpg" alt="team-13" class="img-fluid rounded"></div>
+                                        <div class="img-container"><img src="client-EA-Consulting-PvtLtd.jpg" alt="team-13" class="img-fluid rounded"></div>
                                     </div>
                                 </div>
                             </div>
