--- a/index.html
+++ b/index.html
@@ -15488,7 +15488,7 @@
                                 </div>
                                 <div class="col-lg-2 col-md-3">
                                     <div class="mycarousel-item p-2 p-md-3 bg-white text-center">
-                                        <div class="img-container"><img src="client-HBL-Curr-Exc.4350ed02.png" alt="team-4" class="img-fluid rounded"></div>
+                                        <div class="img-container"><img src="client-HBL-Curr-Exc.png" alt="team-4" class="img-fluid rounded"></div>
                                     </div>
                                 </div>
                                 <div class="col-md-3 mb-5">
